<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogin"
        android:hint="@string/et_email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/et_password"
        android:layout_below="@+id/etLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/btnLogin"
        android:id="@+id/btnSignIn"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:onClick="openActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/tv_not_have_account"
        android:id="@+id/tvNotHavingAccount"
        android:layout_below="@+id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:id="@+id/btnSignUpHere"
        android:text="@string/btn_Sign_Up_Here"
        android:textSize="20dp"
        android:layout_below="@+id/tvNotHavingAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="openActivity"/>

</RelativeLayout>
